# Abstract-graph-3th-sem-

./: .gitignore  2Sat.cpp  2sat.json  CMakeLists.txt  ChangeLog.txt  README.md  main_test.cpp  test.cpp  tests
2sat/: .2sat.cpp.swp  2sat.cpp  2sat.h  2satTestLib.cpp  2satTestLib.h  CMakeLists.txt  jsoncpp  test.cpp
2sat/tests/: test0.json  test1.json
Graph/: CMakeLists.txt  graph.h  main.cpp  test_graph.txt
Tasks/: readme.md
Tasks/2sat/: 2sat.cpp  2sat.h  2satLocalTest.cpp  CMakeLists.txt
Tasks/2sat/tests/: test1.json
Tasks/commonstr/: CMakeLists.txt  LongestCommonSubstring.cpp  LongestCommonSubstring.h  commonstrLocalTest.cpp
Tasks/smallTasks/hashtable/: CMakeLists.txt  hashtable.h  hashtable.hpp  main.cpp
Tasks/smallTasks/inchash/: CMakeLists.txt  inchash.cpp  inchash.h  inchashLocalTest.cpp
Tasks/smallTasks/safeconstructor/: CMakeLists.txt  main.cpp  safe.h
Tasks/smallTasks/ukkonen/: CMakeLists.txt  main.cpp  Ссылки
Tasks/statemachine/: CMakeLists.txt  StateMachineGraph.cpp  StateMachineGraph.h  statemachineLocalTest.cpp
Tasks/transport/: CMakeLists.txt  transport.h  transportLocalTest.cpp
Tasks/waterway/: CMakeLists.txt  FenwickTree.cpp  FenwickTree.h  waterwayLocalTest.cpp
Tasks/waterway/tests/: test0.json
agraph/: CMakeLists.txt  LandingGraph.cpp  LandingGraph.h  MainGraph.cpp  MainGraph.h  MainGraph.hpp  SalesmanGraph.h  TransportGraph.cpp  TransportGraph.h  TransportGraph.hpp  agraph.cpp  agraph.h  graphs.cpp  graphs.h  test.cpp
agraph/matrix/: m.h
build-ninja_turtles-Desktop-Default/: 2sat_exe  graph_local_tests  tests
build-ninja_turtles-Desktop-Default/jsoncpp/: CTestTestfile.cmake
build-ninja_turtles-Desktop-Default/jsoncpp/include/: CTestTestfile.cmake
build-ninja_turtles-Desktop-Default/jsoncpp/src/: CTestTestfile.cmake
build-ninja_turtles-Desktop-Default/jsoncpp/src/lib_json/: CTestTestfile.cmake
graph/: CMakeLists.txt  CMakeLists.txt~  graph.h  main.cpp  table.h
plane/: PlaneGraph.h  main.cpp  plane.pro  planegraph.cpp  planegraph.h
salesman/: CMakeLists.txt  SalesmanGraph.cpp  SalesmanGraph.h  hello.txt  main.cpp  salesman.cpp  salesman.h
salesman/tests/: test0.json
smallTasks/hashtable/: CMakeLists.txt  hashtable.h  hashtable.hpp  main.cpp
smallTasks/safeConstructor/: CMakeLists.txt  main.cpp  safe.h
smallTasks/ukkonen/: CMakeLists.txt  main.cpp
statemachine/: CMakeLists.txt  StateMachineGraph.cpp  StateMachineGraph.h  main.cpp  stateMachineGraph.cpp  stateMachineGraph.h  stateTest.cpp
testLibraries/: 2satTestLib.cpp  2satTestLib.h  baseTestLib.cpp  baseTestLib.h  readme.md  transportTestLib.cpp  transportTestLib.h  transportTestLibrary.h  waterwayTestLib.cpp  waterwayTestLib.h
tests/: graph.json
tests/2sat/: 2sat.json  test2.json  test3.json
tests/transport/: pattern  test0.json
transport/: CMakeLists.txt  main.cpp  transport.h
waterway/: CMakeLists.txt  FenwickTree.cpp  FenwickTree.h  SparseTable.cpp  SparseTable.h  WaterTest.cpp  WaterWayLocalTest.h  WaterWayTest.cpp  WaterWayTesting.cpp  WaterWayTesting.h
